--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v2
       - name: Deploy to Production environment
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USER }}
@@ -23,5 +23,4 @@ jobs:
             .ftpquota
             .htaccess
             .well-known
-            .git/
-            .github/
+            **/.git*/**
